--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,7 @@
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <version>${maven-failsafe-plugin.version}</version>
                 <configuration>
+                    <testFailureIgnore>false</testFailureIgnore>
                     <suiteXmlFiles>
                         <suiteXmlFile>${project.basedir}/src/test/resources/e2e.xml</suiteXmlFile>
                     </suiteXmlFiles>
