adding allure testops support

--- a/pom.xml
+++ b/pom.xml
@@ -95,7 +95,7 @@
                     </argLine>
                     <systemPropertyVariables>
                         <allure.link.mylink.pattern>https://example.org/mylink/{}</allure.link.mylink.pattern>
-                        <allure.link.issue.pattern>https://example.org/issue/{}</allure.link.issue.pattern>
+                        <allure.link.issue.pattern>https://jira.jira.svc.cluster.local:8080/issue/{}</allure.link.issue.pattern>
                         <allure.link.tms.pattern>https://example.org/tms/{}</allure.link.tms.pattern>
                         <allure.results.directory>target/allure-results</allure.results.directory>
                     </systemPropertyVariables>
